fix letter spacing

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -27,7 +27,7 @@ body { padding-top: 60px; background: #373535; color: #fff;}
     h3 {
       color: #fff;
       margin-bottom: 0;
-      letter-spacing: 0.05em;
+      letter-spacing: 0.06em;
     }
     
     .alert-error {
